k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: trust-rating
  labels:
    name: trust-rating
    environment: production
